* Sat Dec 19 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.2.2
- Removed EL6 support

* Thu Jul 23 2020 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 0.2.1-0
- update the upper bound of simplib for SIMP 6.5 release

* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 0.2.0-0
- Drop Puppet 4 support
- Add Puppet 6 support
- Add puppetlabs-stdlib 6 support

* Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.1.1-0
- Update the upper bound of stdlib to < 6.0.0
- Update a URL in the README.md

* Tue Nov 06 2018 Liz Nemsick <lnemsick-simp@gmail.com> - 0.1.0-0
- Update badges in README.md

* Fri Oct 12 2018 Nick Miller <nick.miller@onyxpoint.com> - 0.1.0-0
- Added $package_ensure parameter
  - Changed the package from 'latest' to 'installed'
  - It will also respect `simp_options::package_ensure`

* Thu Sep 13 2018 Nicholas Markowski <nicholas.markowski@onyxpoint.com> - 0.1.0-0
- Added support for Puppet 5 and OEL

* Fri Sep 07 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 0.1.0-0
- Drop Hiera 4 support

* Thu Jul 06 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 0.0.2-0
- Update puppet dependency and remove OBE pe dependency in metadata.json

* Mon Dec 12 2016 Nick Miller <nick.miller@onyxpoint.com> - 0.0.1
- Migrated material from simplib
- First cut